[package]
name = "mrf-tool"
description = "Tool for preparing and introspecting WASM MRFs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
serde_json = "1.0.114"
wasm-encoder = "0.200.0"
wasmparser = "0.200.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
